<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lazy Bird</string>
    <string name="title_tab_record">Record</string>
    <string name="title_tab_train">Train</string>
    <string name="title_tab_report">Report</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_classifier_info">Classifier Info</string>
    <string name="title_activity_live_view">Live View</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_report_on">Reporting is ON</string>
    <string name="menu_report_off">Reporting is OFF</string>
    <string name="menu_help">Help</string>
    <string name="menu_showlog">Show log file</string>
    <string name="menu_about">About</string>
    <string name="menu_showClassifierInfo">Show classifier info</string>
    <string name="menu_saveTrainingData">Save training data</string>
    
    <!-- Services -->
    <string name="service_started">ARFF Recorder service started</string>
    <string name="service_stopped">ARFF Recorder service stopped</string>
    <string name="too_many_values">Recording stopped</string>
    <string name="too_many_values_long">Recording stopped after %d values</string>
    <string name="service_waiting">Recording will start in %s seconds</string>
    <string name="service_waiting_ticker">Recorder service waiting</string>
    <string name="rservice_started">Reporter service started</string>
    <string name="rservice_stopped">Reporter service stopped</string>
    <string name="rservice_label">Reporter Service</string>
    <string name="write_fail">Error writing file</string>
    <string name="write_fail_long">Error writing the log file</string>
    <string name="conn_fail">Connection lost</string>
    <string name="conn_fail_long">Connection to the server lost</string>
    
    <!-- Settings -->
    <string name="set_valueUpdateSpeed">Update speed (display)</string>
    <string name="set_outputDir">Output directory</string>
    <string name="set_outputDir_long">Where to put the recorded files.</string>
    <string name="set_maxNumValues">Datapoint limit</string>
    <string name="set_startDelay">Start delay</string>
    <string name="set_startDelay_long">Time to wait (in seconds) before starting to record.</string>
    <string name="set_numFolds">Number of folds</string>
    <string name="set_numFolds_long">The number of folds to be used when cross-validating the trained classifier.</string>
    <string name="set_reportServer">Server address</string>
    <string name="set_reportServer_long">The server address or hostname and port for activity reporting. If empty, the default server will be used.</string>
    <string name="set_reportUser">Username</string>
    <string name="set_reportUser_long">The user ID to use when connecting to the server, needs to be 7 decimal digits.</string>
    <string name="set_writeLog">Write log file</string>
    <string name="set_writeLog_enable">An activity log will be written</string>
    <string name="set_writeLog_diasble">No log will be written</string>
    <string name="set_logFilename">Filename</string>
    <string name="set_logFilename_long">The name for the log file.</string>
    <string name="set_useWakelock">Use Wakelock</string>
    <string name="set_useWakelock_note">Enable this option, if the device sleeps while recording or reporting.\nOn some devices this is needed, but the battery use will be greater if it\'s activated.</string>

    <!-- Record -->
    <string name="helpRecorder">Here you can record accelerometer data to ARFF files to train a classifier with.\nYou have to record data and train a classifier, before you can report your activity to the server.</string>
    <string name="txtStatus">Recorder status:</string>
    <string name="btnMakeFilename">Make Filename</string>
    <string name="btnArff">+ .arff</string>
    <string name="labelInstructions">First enter a filename and select a class, then switch on the recorder.</string>
    <string name="labelClass">ARFF class:</string>
    <string name="filename">Filename</string>
    <string name="startTime">Start time:</string>
    <string name="lastValues">Last values:</string>
    <string name="nothing">-</string>
    <string name="numValues">Number of values:</string>
    <string name="dialogInfo">Info:</string>
    <string name="valsPerSecond">Values/Second:</string>
    <string name="btnDelete">Delete file</string>
    <string name="fileNotFound">File not found</string>
    <string name="fileDeleted">File deleted</string>
    <string name="fileNotDeleted">File &lt;i&gt;not&lt;/i&gt; deleted</string>

    <!-- Train -->
    <string name="helpTrain">Here you can train a classifier to classify your activity, using data you recorded.\nYou have to record data and train a classifier, before you can report your activity to the server.</string>
    <string name="btnSelectFile">Select data file(s)&#8230;</string>
    <string name="btnSelectFeatures">Select features&#8230;</string>
    <string name="btnSaveFeatures">Save Features&#8230;</string>
    <string name="btnTrain">Train</string>
    <string name="btnValidate">Validate</string>
    <string name="labelSelectClassifier">Select a classifier:</string>
    <string name="labelSelectWindowSize">Select sliding window size (ms):</string>
    <string name="noFiles">No ARFF files in output directory.\nPut files you want to use in the output directory.</string>
    <string name="trainQuestion">Replace current classifier?</string>
    <string name="trainNote">If you train a new classifier, the current one will be replaced.\nDo you want to continue?</string>
    <string name="extractionCancelled">Feature extraction cancelled</string>
    <string name="saveFeaturesNote">If the file exists it will be overwritten.</string>
    <string name="fileSaved">File saved</string>
    <string name="trainingCancelled">Training cancelled</string>
    <string name="statusExtract">Extracting&#8230;</string>
    <string name="statusTrain">Training&#8230;</string>
    <string name="statusValidate">Validating&#8230;</string>
    <string name="statusCancel">Cancelling&#8230;</string>
    <string name="trainingFinished">Training finished</string>
    <string name="trainingFinished_long">The classifier was trained successfully and set as the default classifier.\nYou can now perform a cross-validation.</string>
    <string name="validationQuestion">Get coffee?</string>
    <string name="validateNote">This will perform a cross-validation of the generated classifier, to determine how well it classifies instances.\nThis can take some time, do you want to continue?</string>
    <string name="validationCancelled">Validation cancelled</string>
    <string name="validationResults">Validation results</string>

    <!-- Report -->
    <string name="helpReport">Here you can classify your activity and report it to the server or output it a few other ways.\nYou have to record data and train a classifier, before you can report your activity to the server.\nIf you want to report to the server, you have to set a username first.</string>
    <string name="lblNoClassifier">You have to train a classifier first.</string>
    <string name="swClassify">Classification:</string>
    <string name="lblOutputOptions">Output options:</string>
    <string name="chkTts">Text-to-speech</string>
    <string name="chkReport">Report to server</string>
    <string name="lblLog">Log:</string>
    <string name="log_new_activity">Activity changed: %s</string>

    <!-- Classifier Info -->
    <string name="noValidation">No validation performed.</string>
    <string name="noClassifier">No classifier trained yet.</string>
    <string name="txtClassifierType">Classifier type: %1$s&#8195;(%2$d %3$s)</string>
    <string name="txtTrainDate">Trained on %1$s, with %2$d instances.</string>
    <string name="txtTrainedFeatures">Trained features: %s</string>
    
    <!-- Live View -->
    <string name="chkShowOffline">Show offline</string>
    <string name="globalView">Global View</string>
    <string name="lblCannotConnect">Cannot connect to the server, please check your settings and make sure you have an internet connection.</string>
    <string name="lblConnectionLost">Connection lost. Tap to reconnect.</string>
    <string name="statusDisconnected">Disconnected</string>
    <string name="statusConnecting">Connecting&#8230;</string>
    <string name="statusConnected">Connected</string>
    <string name="menu_liveViewLegend">Legend</string>
    <string name="legend_activities">Activities</string>
    <string name="legend_roles">Roles</string>
    <string name="legend_roomStates">Room states</string>
    <string name="role_speaker">Speaker</string>
    <string name="role_listener">Listener</string>
    <string name="role_transition">Unknown</string>
    <string name="room_empty">Empty</string>
    <string name="room_lecture">Lecture</string>
    <string name="room_transition">Transition</string>

    <!-- Errors and stuff -->
    <string name="error">Error</string>
    <string name="error_generic">An error occurred, please tell the developer.</string>
    <string name="error_filename">Not a valid filename</string>
    <string name="error_extstorage">External storage not writable</string>
    <string name="error_extstorage_read">External storage not readable</string>
    <string name="error_nodir">Output directory doesn\'t exist</string>
    <string name="error_nofile">A file was not found</string>
    <string name="error_io">An IO error occurred</string>
    <string name="error_attributes">Input file %s is of the wrong format.</string>

    <!-- Words -->
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="offline">Offline</string>
    
    <!-- Misc -->
    <string name="class_sitting">sitting</string>
    <string name="class_standing">standing</string>
    <string name="class_walking">walking</string>
    <string name="class_null">null</string>
    <string name="enterFilename">Enter a filename</string>
    <string name="saveTrainingData">Enter a filename to save the training data for the current classifier.\nIf the file exists it will be overwritten.</string>

</resources>